Upgrade to Java 17 (#202)